# glr

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: stage_a.yaml  stage_a_mvc.yaml  stage_a_mvc_v2.yaml
glr/: __init__.py
glr/data/: __init__.py  dsprites.py  masking.py
glr/eval/: __init__.py  causal_swap.py  compositional.py  mig.py  probe.py
glr/losses/: __init__.py  consistency.py  masked_pred.py  vicreg.py
glr/models/: __init__.py  bcs.py  slot_attention.py  stage_a.py  tpr.py
glr/train/: __init__.py  stage_a.py
glr/utils/: __init__.py  config.py  memory.py  seed.py
scripts/: eval_stage_a.py  run_mvc.sh  train_stage_a.py
tests/: test_data.py  test_eval.py  test_eval_script.py  test_losses.py  test_models.py  test_smoke.py
